@@ -1,7 +1,7 @@
 ## Generators
 
 ```elixir 
-OEIS.Util.generate_function_sequences(~w(), in_module: Chunky.Sequence.OEIS.Repr)
+OEIS.Util.generate_function_sequences(~w(), in_module: Chunky.Sequence.OEIS.Factors)
 OEIS.Util.generate_list_sequences(, in_module: Chunky.Sequence.OEIS.Factors)
 ```
 
@@ -11,9 +11,7 @@ OEIS.Util.generate_list_sequences(, in_module: Chunky.Sequence.OEIS.Factors)
 
 ## Core
 
-A000120		1's-counting sequence: number of 1's in binary expansion of n (or the binary weight of n). 
-A001358		Semiprimes (or biprimes): products of two primes. 
-A001489		a(n) = -n.
+
 
 
 ## Powers
@@ -25,26 +23,6 @@ A001489		a(n) = -n.
 ## Divisors
 
 
-A001414		Integer log of n: sum of primes dividing n (with repetition). Also called sopfr(n).
-
-A014612		Numbers that are the product of exactly three (not necessarily distinct) primes.
-A014613		Numbers that are products of 4 primes (these numbers are sometimes called "4-almost primes", a generalization of semiprimes).
-A014614		Numbers that are products of 5 primes (or 5-almost primes, a generalization of semiprimes)
-A046306		Numbers that are divisible by exactly 6 primes with multiplicity.
-A046308		Numbers that are divisible by exactly 7 primes counting multiplicity.
-A046310		Numbers that are divisible by exactly 8 primes counting multiplicity.
-A046312		Numbers that are divisible by exactly 9 primes with multiplicity.
-A046314		Numbers that are divisible by exactly 10 primes with multiplicity.
-A069272		11-almost primes (generalization of semiprimes).
-A069273		12-almost primes (generalization of semiprimes).
-A069274		13-almost primes (generalization of semiprimes).
-A069275		14-almost primes (generalization of semiprimes).
-A069276		15-almost primes (generalization of semiprimes).
-A069277		16-almost primes (generalization of semiprimes).
-A069278		17-almost primes (generalization of semiprimes).
-A069279		Products of exactly 18 primes (generalization of semiprimes).
-A069280		19-almost primes (generalization of semiprimes).
-A069281		20-almost primes (generalization of semiprimes).
 
 
 ## Repr
